fixed some styling + spacing

--- a/src/static/styles/items/create.scss
+++ b/src/static/styles/items/create.scss
@@ -29,6 +29,8 @@
 
         &-container {
             border: 1px solid deeppink;
+            border-radius: 8px;
+            box-shadow: #555 3px 3px 3px 0px;
         }
     }
 
