--- a/src/static/styles/items/home.scss
+++ b/src/static/styles/items/home.scss
@@ -1,6 +1,5 @@
 .home {
     &-root {
-        padding: 20px;
         justify-content: center;
     }
 }
